# claude-code-proxy

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  benchmark.py  claude.sh  cprofile_analysis.py  custom_models.yaml.example  direct_api_test.py  final_performance_test.py  hook.py  install.sh  models.py  models.yaml  models.yaml.example  performance.py  performance_test.py  profile_server_workflow.py  pyproject.toml  raw_streaming_optimizer.py  server.py  test_conversions.py  test_optimization.py  test_raw_optimization.py  tests.py  tests_unittest.py  uninstall.sh
anthropic_proxy/: __init__.py  __main__.py  client.py  config.py  converter.py  hook.py  server.py  streaming.py  types.py  utils.py
anthropic_proxy/plugins/: filter_tools.py
docs/: architecture.md  features.md  testing.md
legacy/: models.py  server.py
plugins/: filter_tools.py
scripts/: stop.sh
tests/: test_conversions.py  test_hooks.py  test_routing.py  test_server.py  test_unittest.py
