[project]
name = "anthropic-proxy"
version = "0.1.2"
description = "Proxy that translates between Anthropic API and OpenAI-compatible models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "openai>=1.90.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.9.0",
]

